syntax = "proto2";

package colav;

message MissionResponse {
    required string mission_tag = 1;
    required string mission_start_timestamp = 2;

    enum MissionResponseEnum { 
        UNKOWN=0;
        MISSION_STARTING=1;
        MISSION_ERROR=2;
        MISSION_INVALID=3;
    }
    required MissionResponseEnum mission_response = 3;
    required string mission_response_details = 4;
}